--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/jjkr/stm32-uploader#readme",
   "dependencies": {
+    "lodash": "^4.6.1",
     "usb": "^1.1.1"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015-node": "^5.0.3"
   }
 }
