--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A code uploader for stm32 arm chips",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "start": "node pkg/main.js",
+    "test": "mocha",
+    "build": "babel src --out-dir pkg",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -18,7 +21,7 @@
     "Cortex-M4"
   ],
   "author": "Joe Kramer",
-  "license": "MIT",
+  "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/jjkr/stm32-uploader/issues"
   },
@@ -29,6 +32,8 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node": "^5.0.3"
   }
 }
