--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-async-to-generator": "^6.7.0",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node": "^5.0.3"
   }
